--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <title>Recipe Search</title>
 </head>
 <body>
 <header>
-  <h3>Recipe Search</h3>
-</header>
+  <h2>Recipe Search</h3>
 <form action="">
 <input type="text" name="Search" value="">
 <input type="button" name="Search" value="Search">
 </form>
+</header>
 <div class = 'results'>
 </div>
   <script src="main.js"></script>
