--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <header>
   <h2>Recipe Search</h3>
-<form action="">
-<input type="text" name="Search" value="">
-<input type="button" name="Search" value="Search">
-</form>
+<div class ='form'>
+<input id ='input' type="textarea" name="Search" value="" placeholder="Search">
+<input id ='but' type="button" name="Search" value="Search">
+</div>
 </header>
 <div class = 'results'>
 </div>
